Added Hover tip and the beginning of some validation code

--- a/EME4xWinFormSolution/EmeLibrary/EmeLT.resx
+++ b/EME4xWinFormSolution/EmeLibrary/EmeLT.resx
@@ -1782,7 +1782,13 @@
         NMuHvLLwZ8MvB9j4L8Ox3EirHLdNa2scaPPIEUSTyBpJNo3MxoooA9aAA6DHOaWiigAooooA/9k=
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>582, 19</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>43</value>
+  </metadata>
+  <metadata name="tooltip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>712, 19</value>
   </metadata>
 </root>
