Changes to uc_distribution user control

--- a/EME4xWinFormSolution/EmeLibrary/uc_distribution.resx
+++ b/EME4xWinFormSolution/EmeLibrary/uc_distribution.resx
@@ -181,4 +181,25 @@
         ThhQMXjp4PD+2iHvnfCIWDq3cHYPKPQ0O3Uys4TULCE1t2N4AyM5bqmfP2woAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAABiklEQVQ4T6VRsWoCURAUhBSB
+        gOAPXGUtCAG7a6xCCnuLQCCd4Cfcv1gHIUECEhAstFA4OInwEOUQjZgrlBhJCIHNzvre4+6SKlmY4zG7
+        M+ztZIjoXzh+dJFSOYanUdQ0eFdzDUZO00kDNBg+rVYkUGrLKDKuaDolWq+JFgvwPkNMrAEIaUQR7YKA
+        Vp0O4c3cVsS7nXCfmw3RcikmaYMGGhDfVSp0Wy5T2GodTViMN7jHWu1oMp/DxLUG2+HwBuuhiSEMGxMj
+        ThjMZsSakjXw6nXnzfcVtkib/BDzzLLXu+c/OLUGXNkL1z3/GI+fcUAMPlSrVoy3Eb8MBl2edyCKG2Te
+        g+DaHCy+toG5yddk8sr/LxFbAxC/ibF2+iY2HSQXM/CwetTvJ8RYO30TJEVhmEzhqd2+xGVpv6eR5yUO
+        Fj8setgS27KmYA24zrrNpif5solAX9ukQ4eDFWOWNSdxA1ReTJSSIR2Vg3Q48xE4HFCL8xCkDVBolDQk
+        Kq4so8AAh+uLGGUN/g7KfAMZ7aZX37shcgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAACXSURBVDhPpYyxDYNQEEOdLaiySCZhESbJJMkgkeio6FJR0aW6xKcE+cgJ+GDpSXeWbZjZIVKz
+        hNQsIT6i6n4yhZ5mp054RCwNH5v8BijNeyc8IpYeLzibBxhUbiOcua+dv4HrgEVWB5onFlkdUOoeztzX
+        ThhQMXjp4PD+2iHvnfCIWDq3cHYPKPQ0O3Uys4TULCE1t2N4AyM5bqmfP2woAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
