Adjust element in the gui to fit nicely into place, made sure similar element had the same style

--- a/EME4xWinFormSolution/EmeLibrary/uc_extentTemporal.resx
+++ b/EME4xWinFormSolution/EmeLibrary/uc_extentTemporal.resx
@@ -160,4 +160,7 @@
         Kq4so8AAh+uLGGUN/g7KfAMZ7aZX37shcgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
