--- a/EME4xWinFormSolution/EmeLibrary/EmeLT.resx
+++ b/EME4xWinFormSolution/EmeLibrary/EmeLT.resx
@@ -281,6 +281,24 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
 </value>
   </data>
+  <data name="contentsToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6
+        JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAAF2+SX8VGAAAACXBIWXMAAAsNAAALDQHtB8AsAAACnUlE
+        QVQ4T52TWUjUURTGfeuptCCFIDDrQYpQxNRcMBXHXFCzMhozdUY0jTaVksoXQSpQMyxtnBR3M5c0c51x
+        3CYnt1ATlwhFqKcelCLQqH797x8nneilHj443HPOd+/5znetAAukXUtTSMiTYJKwugERizPFn/VbG+0l
+        5Obk3PlaXlFDZ7eB1yOTMkQszkRO1IhaC4KN5qriYi06g4mShlkSs+fxT53BP2WSs5mj3HsyxssuI6JG
+        1JpJzAS5IqEfnOZK7gI+KQvc1nzgxdAq7cYVCp8uE5A8QEymgfpWk5kkVyaQAoV4Wm+fifT8OdzVM4Rc
+        neXTyjd+fF+Xan5KgMGxjxw60YQyo522zkHzOApBkCfmq3g+g1fSFJ7qMQJSxrl09w2K5C7iskx8/rLG
+        +to6AQnN7AsqJ7uwR9ZE9AoCkxApNWcUT9UIR+ONuMUaOBjVjq1/I05RDSy+X2J2YZkDQSXY+Twm/EKd
+        LKzoFQSrQumAJD1u5/txjdHhGNGKnV8tDsHVlNXqeTc7ReKtFnZ7P8IhUINzZKm8HdH7m8BP1YbzmU7s
+        gxvZ5V3BNhct+dp+FuenuZjVyP5ALYcjKnGKrMRbWWNBII+gutnB3sBadnqVYe2hkW7TUFw1RF2zEceQ
+        Mtyi66XGZryULSTcaLcYQRbxYXkvO9yLsXYvwsajkD2+RZxMreVcehNupxs5FtshoQdfacQ8zYCFiPIa
+        db1GwhJL2e5agM2RAnxjKxganmBkYo7oy3rcTxnwURpRXx+Ubn+1uUZhBimQjdSlNxGqKsHW8z4+MdXo
+        +qeYfLtEqNqAS/gwCRkmWjrGLY20QbBpZeklhWXdxKU/43h8DWGqJhLS+3ggWblLN/x3K28h+b/PtBVS
+        8h++M1a/APoKj6alKw3kAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAEBAAAAEAIABoBAAARgAAACAgAAABACAAqBAAAK4EAAAwMAAAAQAgAKglAABWFQAAQEAAAAEA
